package mutantes.game;

public enum TipoEvento {
    MOVIMIENTO,
    ATAQUE,
    DEFENSA,
    BAJA,
    VICTORIA
}
