package mutantes.control;

public enum Accion {
    ATACAR,
    DEFENDER
}
